Reactivate and move coverflow to main column, fixes #4390
It's not using ES yet and it would be nice to have some sort of infinite scroll
instead of sending the user to the digitalobject/browser page when the showAll
button is clicked. Maybe later.

--- a/plugins/arDominionPlugin/css/less/scaffolding.less
+++ b/plugins/arDominionPlugin/css/less/scaffolding.less
@@ -1121,6 +1121,39 @@ section .vcard:last-child > .field:last-child > div {
 
 }
 
+// Coverflow
+// Overrides imageflow.css
+
+#coverflow {
+  background-color: @black;
+  background-color: rgba(0, 0, 0, .75);
+  #imageflow_caption {
+    color: @white;
+  }
+  .imageflow .caption {
+    font-weight: normal;
+    font-family: @sansBoldFontFamily;
+  }
+  img {
+    cursor: pointer !important
+  }
+  .result-count {
+    margin: 0 0 10px 0;
+    a {
+      border: 2px solid @white;
+      margin-left: 8px;
+      padding: 4px;
+      .border-radius(4px);
+      color: @white;
+      font-size: 10px;
+      &:hover {
+        background-color: @white;
+        color: @black;
+      }
+    }
+  }
+}
+
 // Responsive design
 
 @media (min-width: 1200px) {
